--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,9 @@
 /* @group Header top region
 /-------------------------------------------------------------- */
 
-#header-group-wrapper {
+#header {
   background: #fff;
-}
-
-#header-top-wrapper {
-  background: #e1e1e1;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 3px solid #a7ce38;
 }
 
 #wwm-collapse-3 {
@@ -38,11 +34,6 @@
 
 /* Wrapper around logo, site name, and slogan */
 
-.header-site-info {
-  margin-bottom: 0;
-  float: left;
-}
-
 #logo {
   float: left;
   margin: 0 15px 0 0;
@@ -62,19 +53,7 @@
   }
 }
 
-#site-name-wrapper {
-  float: left;
-}
-
-#site-name {
-  font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
-  font-size: 300%;
-  line-height: 125%;
-  font-weight: normal;
-  border: none;
-}
-
-.pane-page-site-name .pane-content a {
+.pane-page-site-name a {
   font-size: 10vw;
   width: 100%;
   margin-left: -8.5vw;
@@ -98,12 +77,6 @@
 }
 
 /* Typography for site slogan */
-
-#slogan {
-  font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
-  font-size: 116.7%; /* 14px/12px */
-  margin-top: -5px;
-}
 
 .pane-page-slogan {
   line-height: 1;
@@ -130,6 +103,6 @@
   padding: 20px 0 0 0;
 }
 
-#block-panels_mini-header {
+#block-panels-mini-header {
   margin-bottom: 0;
 }
