--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,5 @@
 body {
+  font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
 }
@@ -125,6 +126,13 @@ html {
   border: 0;
   margin-bottom: 0;
   padding: 0;
+}
+
+.header-inner,
+#main-content,
+.footer-inner {
+  max-width: 1200px;
+  margin: auto;
 }
 
 /* @group Blocks, panels & all regions
