--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -10,6 +10,7 @@
     margin: 0 4px 0 0;
     padding: 0;
     position: relative;
+    line-height: 24px;
   }
   a.sf-depth-1 {
     background-color: #e1e1e1;
