--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -506,6 +506,9 @@ legend.collapse-processed a:visited {
   display: -ms-flexbox;
   display: flex; }
 
+#superfish-1 a {
+  color: #154b70;
+  text-decoration: none; }
 #superfish-1 li.sf-depth-1 {
   background: transparent;
   display: block;
@@ -517,11 +520,32 @@ legend.collapse-processed a:visited {
 #superfish-1 a.sf-depth-1 {
   background-color: #e1e1e1;
   border: none;
-  color: #154b70;
   display: block;
   padding: 5px 10px 1px 10px;
-  text-decoration: none;
   border-radius: 5px 5px 0 0; }
+  #superfish-1 a.sf-depth-1:hover {
+    background-color: #b5ee48;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
+    color: #fff; }
+#superfish-1 li.sfHover > ul {
+  padding: 0 8px 9px 0 !important;
+  background: #97d023;
+  font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+  font-size: 91.7%;
+  margin-top: -4px;
+  position: absolute;
+  text-align: left;
+  text-transform: none;
+  z-index: 2;
+  -webkit-filter: opacity(0.95);
+          filter: opacity(0.95);
+  border-radius: 0 0 5px 5px;
+  overflow: visible !important;
+  left: 0;
+  top: 33px; }
+  #superfish-1 li.sfHover > ul li a {
+    background: #98d022;
+    padding: 5px 10px 1px 10px; }
 
 ul.sf-menu {
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
@@ -536,6 +560,9 @@ a.menuparent:after {
 
 a.menuparent.sf-depth-1:after {
   content: '\f0d7'; }
+
+.sf-sub-indicator {
+  display: none; }
 
 /* @group Vertical Superfish */
 .superfish-vertical {
