--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -3,6 +3,10 @@
 }
 
 #superfish-1 {
+  a {
+    color: #154b70;
+    text-decoration: none;
+  }
   li.sf-depth-1 {
     background: transparent;
     display: block;
@@ -15,11 +19,37 @@
   a.sf-depth-1 {
     background-color: #e1e1e1;
     border: none;
-    color: #154b70;
     display: block;
     padding: 5px 10px 1px 10px;
-    text-decoration: none;
     border-radius: 5px 5px 0 0;
+
+    &:hover {
+      background-color: #b5ee48;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
+      color: #fff;
+    }
+  }
+
+  li.sfHover > ul {
+    padding: 0 8px 9px 0 !important;
+    background: #97d023;
+    font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-size: 91.7%;
+    margin-top: -4px;
+    position: absolute;
+    text-align: left;
+    text-transform: none;
+    z-index: 2;
+    filter: opacity(.95);
+    border-radius: 0 0 5px 5px;
+    overflow: visible !important;
+    left: 0;
+    top: 33px;
+
+    li a {
+      background: #98d022;
+      padding: 5px 10px 1px 10px;
+    }
   }
 }
 
@@ -38,6 +68,10 @@ a.menuparent:after {
 
 a.menuparent.sf-depth-1:after {
   content: '\f0d7';
+}
+
+.sf-sub-indicator {
+  display: none;
 }
 
 /* @group Vertical Superfish */
