--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -15,6 +15,7 @@
     padding: 0;
     position: relative;
     line-height: 24px;
+    border-radius: 5px 5px 0 0;
   }
   a.sf-depth-1 {
     background-color: #e1e1e1;
@@ -23,7 +24,7 @@
     padding: 5px 10px 1px 10px;
     border-radius: 5px 5px 0 0;
 
-    &:hover, .active-trail {
+    &:hover, .active {
       background-color: #b5ee48;
       background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
       color: #fff;
@@ -31,9 +32,11 @@
   }
 
   li.sfHover {
-    background-color: #b5ee48;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
-    color: #fff;
+    a {
+      background-color: #b5ee48;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
+      color: #fff;
+    }
 
     > ul {
       padding: 0 8px 9px 0 !important;
