--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -24,7 +24,7 @@
     padding: 5px 10px 1px 10px;
     border-radius: 5px 5px 0 0;
 
-    &:hover, .active {
+    &:hover, &.active {
       background-color: #b5ee48;
       background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
       color: #fff;
@@ -32,7 +32,7 @@
   }
 
   li.sfHover {
-    a {
+    > a {
       background-color: #b5ee48;
       background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
       color: #fff;
