--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -733,14 +733,7 @@ table.update tr.warning .project a:visited,
 .version-status .not-current {
   color: #900; }
 
-div.content-messages div.messages, div.content-help div.help {
-  border: 3px solid #8DC478;
-  font-weight: normal;
-  margin: 0.75em 0;
-  padding: 7px 7px 7px 21px; }
-
-div.messages,
-div.messages.status {
+div.messages {
   background: #fffce3;
   border: 2px solid #eed300;
   color: #c28e00;
@@ -751,6 +744,12 @@ div.messages.status {
   border-radius: 6px;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px; }
+
+.messages.messages--status {
+  border: 3px solid #8DC478;
+  font-weight: normal;
+  margin: 0.75em 0;
+  padding: 7px 7px 7px 21px; }
 
 div.messages ul {
   list-style-position: inside; }
