--- a/sass/components/_messages.scss
+++ b/sass/components/_messages.scss
@@ -65,6 +65,8 @@ div.messages {
   font-weight: normal;
   margin: 0.75em 0;
   padding: 7px 7px 7px 21px;
+  background-color: #EAF8E4;
+  color: #3E642F;
 }
 
 div.messages ul {
