--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -506,9 +506,11 @@ legend.collapse-processed a:visited {
   display: -ms-flexbox;
   display: flex; }
 
-#superfish-1 a {
+#superfish-1 li a {
   color: #154b70;
   text-decoration: none; }
+  #superfish-1 li a:hover {
+    color: #fff; }
 #superfish-1 li.sf-depth-1 {
   background: transparent;
   display: block;
@@ -518,12 +520,15 @@ legend.collapse-processed a:visited {
   position: relative;
   line-height: 24px;
   border-radius: 5px 5px 0 0; }
+  #superfish-1 li.sf-depth-1.sfHover > ul {
+    top: 37px; }
 #superfish-1 a.sf-depth-1 {
   background-color: #e1e1e1;
   border: none;
   display: block;
   padding: 5px 10px 1px 10px;
-  border-radius: 5px 5px 0 0; }
+  border-radius: 5px 5px 0 0;
+  line-height: 24px; }
   #superfish-1 a.sf-depth-1:hover, #superfish-1 a.sf-depth-1.active {
     background-color: #b5ee48;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#b5ee48), color-stop(40%, #95cf1a), to(#95cf1a));
@@ -547,7 +552,7 @@ legend.collapse-processed a:visited {
   border-radius: 0 0 5px 5px;
   overflow: visible !important;
   left: 0;
-  top: 37px; }
+  top: 4px; }
   #superfish-1 li.sfHover > ul li a {
     background: #98d022;
     padding: 5px 10px 1px 10px; }
