--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -3,9 +3,13 @@
 }
 
 #superfish-1 {
-  a {
+  li a {
     color: #154b70;
     text-decoration: none;
+
+    &:hover {
+      color: #fff;
+    }
   }
   li.sf-depth-1 {
     background: transparent;
@@ -16,6 +20,10 @@
     position: relative;
     line-height: 24px;
     border-radius: 5px 5px 0 0;
+
+    &.sfHover > ul {
+      top: 37px;
+    }
   }
   a.sf-depth-1 {
     background-color: #e1e1e1;
@@ -23,6 +31,7 @@
     display: block;
     padding: 5px 10px 1px 10px;
     border-radius: 5px 5px 0 0;
+    line-height: 24px;
 
     &:hover, &.active {
       background-color: #b5ee48;
@@ -52,7 +61,7 @@
       border-radius: 0 0 5px 5px;
       overflow: visible !important;
       left: 0;
-      top: 37px;
+      top: 4px;
   
       li a {
         background: #98d022;
