--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,5 +1,9 @@
 #block-superfish-1 {
   display: flex;
+
+  .block__content {
+    width: 100%;
+  }
 }
 
 #superfish-1 {
@@ -238,6 +242,9 @@ ul.sf-vertical li ul li ul {
       padding-left: 34px;
       background: inherit;
       border-radius: 0;
+      line-height: 24px;
+      text-decoration: none;
+      padding: 5px 10px 1px 10px;
 
       &:hover {
         background: #e9efcc;
