Style the branding region links

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -157,9 +157,12 @@ breadcrumbs {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   width: 100%; }
+  #branding a {
+    color: white;
+    text-decoration: none; }
 
 .copyright p {
   text-align: center;
