--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -3,12 +3,12 @@
 	background: linear-gradient(#2f76a5, #144a6e);
 	color: #fff;
 	min-height: 33px;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	-ms-flex-flow: row wrap;
 	flex-flow: row wrap;
 	width: 100%;
+
+	a {
+		color: white;
+		text-decoration: none;
+	}
 }
