--- a/sass/components/_breadcrumbs.scss
+++ b/sass/components/_breadcrumbs.scss
@@ -1,33 +1,22 @@
-breadcrumbs {
-  margin: 0;
+div.breadcrumb {
+  flex: 1 100%;
+
+  a {
+    color: white;
+    line-height: 30px;
+    display: inline-block;
+  }
 }
 
-#breadcrumbs-inner {
-  width: 100%;
-  margin: 0 1em;
-  max-width: calc(100% - 2em);
+ul.breadcrumb {
+  margin: 0;
+  padding: 0;
 
-  @include breakpoint(768px) {
-    width: 768px;
-    margin: auto;
-  }
-  @include breakpoint(960px) {
-    width: 100%;
-    margin: 0 1em;
-    max-width: calc(100% - 2em);
-  }
-  @include breakpoint(1200px) {
-    width: 1200px;
-    margin: auto;
-  }
-
-  .breadcrumb {
-    padding-bottom: 0;
-
-    a {
-      color: white;
-      line-height: 30px;
-      display: inline-block;
-    }
+  li {
+    color: white;
+    line-height: 30px;
+    display: inline-block;
+    margin-bottom: 0;
+    margin-right: 1em;
   }
 }
