--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -162,6 +162,9 @@ ul.breadcrumb {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
+    @media (min-width: 1200px) {
+      #branding .limiter {
+        margin: auto; } }
 
 .copyright p {
   text-align: center;
