--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -134,6 +134,11 @@ html {
   margin: auto;
 }
 
+#page {
+  background-color: #f2fbd2;
+  background-image: linear-gradient(#f2fbd2, #f5f7e7);
+}
+
 /* @group Blocks, panels & all regions
 /-------------------------------------------------------------- */
 
