--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -113,6 +113,11 @@ html {
   max-width: 1200px;
   margin: auto; }
 
+#page {
+  background-color: #f2fbd2;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f2fbd2), to(#f5f7e7));
+  background-image: linear-gradient(#f2fbd2, #f5f7e7); }
+
 /* @group Blocks, panels & all regions
 /-------------------------------------------------------------- */
 .ie7 .block {
@@ -166,6 +171,17 @@ ul.breadcrumb {
       #branding .limiter {
         margin: auto; } }
 
+#footer {
+  border-top: 3px solid #a7cf38;
+  font-size: 90%; }
+  #footer :before {
+    content: '';
+    height: 30px;
+    display: block;
+    background-color: #2f76a5;
+    background: -webkit-gradient(linear, left top, left bottom, from(#2f76a5), to(#144a6e));
+    background: linear-gradient(#2f76a5, #144a6e); }
+
 .copyright p {
   text-align: center;
   margin-bottom: 0; }
@@ -175,6 +191,8 @@ ul.breadcrumb {
   .pane-menu-menu-footer-links ul.menu li {
     display: inline-block;
     margin-right: 0.5em; }
+    .pane-menu-menu-footer-links ul.menu li a {
+      text-decoration: none; }
 
 form input.form-submit {
   background-color: #286e9b;
