--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,3 +1,16 @@
+#footer {
+	border-top: 3px solid #a7cf38;
+	font-size: 90%;
+
+	:before {
+		content: '';
+		height: 30px;
+		display: block;
+		background-color: #2f76a5;
+		background: linear-gradient(#2f76a5, #144a6e);
+	}
+}
+
 .copyright p {
   text-align: center;
   margin-bottom: 0;
@@ -10,6 +23,10 @@
     li {
       display: inline-block;
       margin-right: 0.5em;
+
+      a {
+      	text-decoration: none;
+      }
     }
   }
 }
