--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -139,8 +139,9 @@ ul.breadcrumb {
     color: white;
     line-height: 30px;
     display: inline-block;
-    margin-bottom: 0;
-    margin-right: 1em; }
+    margin-bottom: 0; }
+    ul.breadcrumb li a:hover {
+      text-decoration: underline; }
 
 #branding {
   background-color: #2f76a5;
