--- a/sass/components/_breadcrumbs.scss
+++ b/sass/components/_breadcrumbs.scss
@@ -17,6 +17,9 @@ ul.breadcrumb {
     line-height: 30px;
     display: inline-block;
     margin-bottom: 0;
-    margin-right: 1em;
+
+    a:hover {
+      text-decoration: underline;
+    }
   }
 }
