Page title styling

--- a/sass/components/_breadcrumbs.scss
+++ b/sass/components/_breadcrumbs.scss
@@ -19,7 +19,7 @@ ul.breadcrumb {
     margin-bottom: 0;
 
     a:hover {
-      text-decoration: underline;
+      text-decoration: underline !important;
     }
   }
 }
