Remove text decoration from links

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -35,7 +35,8 @@ link style */
 a,
 a:link,
 a:visited {
-  color: #0637fb; }
+  color: #0637fb;
+  text-decoration: none; }
 
 /* Hover/active link styles. Don't forget :focus for accessibility */
 a:hover,
