--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -37,6 +37,7 @@ a,
 a:link,
 a:visited {
   color: #0637fb;
+  text-decoration: none;
 }
 
 /* Hover/active link styles. Don't forget :focus for accessibility */
