--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -871,6 +871,9 @@ div.error {
   color: #27638c; }
 
 /* Body of tables */
+table {
+  width: 100%; }
+
 tbody {
   border-top: 1px solid #ccc; }
 
