--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -140,3 +140,13 @@ html {
 .ie7 .block {
   position: relative;
 }
+
+.boxed, .page-admin #content-region {
+  background-color: white;
+  border-color: #27638c;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 1em;
+  margin: 1em 0;
+}
