--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -141,7 +141,7 @@ html {
   position: relative;
 }
 
-.boxed, .page-admin #content-region {
+.boxed, #content {
   background-color: white;
   border-color: #27638c;
   border-style: solid;
