--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -121,7 +121,7 @@ html {
 .ie7 .block {
   position: relative; }
 
-.boxed, .page-admin #content-region {
+.boxed, #content {
   background-color: white;
   border-color: #27638c;
   border-style: solid;
