Fix views admin dropdown menu

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -40,3 +40,18 @@
 		border: 0;
 	}
 }
+
+.views-ui-display-tab-bucket .advanced-help-link {
+	float: left;
+}
+
+.ctools-button ul li {
+    margin: 0;
+}
+
+#views-display-menu-tabs li input {
+	color: initial;
+	font-weight: normal;
+	text-transform: none;
+	font-size: 13px;
+}
