--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -190,6 +190,18 @@ ul.breadcrumb {
   #page-title h1.page-title {
     border: 0; }
 
+.views-ui-display-tab-bucket .advanced-help-link {
+  float: left; }
+
+.ctools-button ul li {
+  margin: 0; }
+
+#views-display-menu-tabs li input {
+  color: initial;
+  font-weight: normal;
+  text-transform: none;
+  font-size: 13px; }
+
 #footer {
   border-top: 3px solid #a7cf38;
   font-size: 90%; }
