--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -134,6 +134,10 @@ html {
   background-image: linear-gradient(#f2fbd2, #f5f7e7);
 }
 
+#content {
+  clear: both;
+}
+
 /* @group Blocks, panels & all regions
 /-------------------------------------------------------------- */
 
