--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -938,7 +938,9 @@ td {
   float: right; }
 
 .tabs--primary {
-  padding: 0 10px; }
+  padding: 0 10px;
+  clear: both;
+  margin-bottom: 10px; }
   .tabs--primary li {
     border-style: none;
     display: inline;
@@ -962,5 +964,29 @@ td {
         border-bottom: 4px solid #94ce18;
         color: #4a95c8;
         background-color: transparent; }
+
+.tabs--secondary {
+  clear: both;
+  border-bottom: 1px solid #555;
+  margin-bottom: 10px;
+  text-transform: lowercase; }
+  .tabs--secondary li {
+    margin: 0 10px;
+    padding: 0; }
+    .tabs--secondary li a {
+      background-color: transparent;
+      border: none;
+      color: #555;
+      float: left;
+      font-weight: bold;
+      margin: 0;
+      padding: 0 0 6px 0;
+      text-decoration: none;
+      white-space: nowrap; }
+      .tabs--secondary li a:hover, .tabs--secondary li a:focus, .tabs--secondary li a.active {
+        border-bottom: 4px solid #555;
+        color: #777;
+        padding-bottom: 2px;
+        background: transparent; }
 
 /*# sourceMappingURL=wwm-marina-omega.styles.css.map */
