--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,7 @@
 #header {
   background: #fff;
   border-bottom: 3px solid #a7ce38;
+  padding-top: 10px;
 }
 
 #wwm-collapse-3 {
@@ -24,7 +25,7 @@
       width: calc(100vw - 28px);
 
       a img {
-        width: 4.4vw;
+        width: 25px;
       }
     }
   }
@@ -42,6 +43,9 @@
 .pane-page-logo img {
   height: 18vw;
 
+  @include breakpoint(768px){
+    height: 20vw;
+  }
   @include breakpoint(768px){
     height: 119px;
   }
@@ -62,6 +66,10 @@
   color: #a7cf38;
   text-shadow: #7b7b7b -3px 0px 1px;
 
+  @include breakpoint(480px){
+    font-size: 11.2vw;
+    margin-left: -9.5vw;
+  }
   @include breakpoint(768px){
     font-size: 72px;
     margin-left: -60px;
@@ -85,6 +93,10 @@
   font-weight: bold;
   color: #444;
 
+  @include breakpoint(480px){
+    font-size: 3vw;
+    margin-left: -12px;
+  }
   @include breakpoint(768px){
     font-size: 19px;
     margin-left: -12px;
