--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -38,6 +38,7 @@ a:link,
 a:visited {
   color: #0637fb;
   text-decoration: none;
+  word-wrap: break-word;
 }
 
 /* Hover/active link styles. Don't forget :focus for accessibility */
@@ -127,7 +128,11 @@ html {
 #main-content,
 .footer-inner {
   max-width: 1200px;
-  margin: auto;
+  margin: 1em;
+
+  @include breakpoint(1220px) {
+    margin: auto;
+  }
 }
 
 #page {
