--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -111,7 +111,7 @@ html {
 #main-content,
 .footer-inner {
   max-width: 1200px;
-  margin: 1em; }
+  margin: 0 1em; }
   @media (min-width: 1220px) {
     .header-inner,
     #main-content,
