--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -128,7 +128,7 @@ html {
 #main-content,
 .footer-inner {
   max-width: 1200px;
-  margin: 1em;
+  margin: 0 1em;
 
   @include breakpoint(1220px) {
     margin: auto;
