Limit boxed content style to admin pages

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -152,7 +152,7 @@ html {
   position: relative;
 }
 
-.boxed, #content {
+.boxed, .page-admin #content {
   background-color: white;
   border-color: #27638c;
   border-style: solid;
