--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -132,7 +132,7 @@ html {
 .ie7 .block {
   position: relative; }
 
-.boxed, #content {
+.boxed, .page-admin #content {
   background-color: white;
   border-color: #27638c;
   border-style: solid;
