Styling for the card slideshow

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -161,3 +161,9 @@ html {
   padding: 1em;
   margin: 1em 0;
 }
+
+.field--name-title-field h1 {
+  text-align: center;
+  margin: 0 0 1rem 0;
+  border: 0;
+}
