--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -141,6 +141,11 @@ html {
   padding: 1em;
   margin: 1em 0; }
 
+.field--name-title-field h1 {
+  text-align: center;
+  margin: 0 0 1rem 0;
+  border: 0; }
+
 div.breadcrumb {
   -webkit-box-flex: 1;
       -ms-flex: 1 100%;
@@ -214,6 +219,44 @@ ul.breadcrumb {
   font-weight: normal;
   text-transform: none;
   font-size: 13px; }
+
+.pane-card-cycles-card-slideshow .views-slideshow-cycle-main-frame,
+.pane-card-cycles-card-slideshow .views-slideshow-cycle-main-frame-row {
+  width: 100% !important; }
+.pane-card-cycles-card-slideshow .col-1 {
+  width: 100%;
+  text-align: center; }
+.pane-card-cycles-card-slideshow .field--name-field-card-image {
+  text-align: center; }
+.pane-card-cycles-card-slideshow .field--name-field-card-sub-headline {
+  text-align: center; }
+.pane-card-cycles-card-slideshow .pane-node-title h2 {
+  margin: 0; }
+.pane-card-cycles-card-slideshow .views-slideshow-controls-text {
+  text-align: center; }
+.pane-card-cycles-card-slideshow .views-slideshow-controls-text-pause {
+  margin: 0.5em; }
+.pane-card-cycles-card-slideshow .views-slideshow-controls-text-previous a:before {
+  content: "\f104";
+  font-family: FontAwesome;
+  color: inherit;
+  margin-right: 0.3em; }
+.pane-card-cycles-card-slideshow .views-slideshow-controls-text-next a:after {
+  content: "\f105";
+  font-family: FontAwesome;
+  color: inherit;
+  margin-left: 0.3em; }
+.pane-card-cycles-card-slideshow .vscc-controls {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  z-index: 100;
+  height: 2em; }
+  .pane-card-cycles-card-slideshow .vscc-controls span {
+    vertical-align: middle;
+    display: inline-block; }
+  .pane-card-cycles-card-slideshow .vscc-controls .vscc_controls_pause a {
+    line-height: 2em; }
 
 #footer {
   border-top: 3px solid #a7cf38;
