Adjust font-sizes for the site name between 718px and 768px

--- a/sass/abstractions/_mixins.scss
+++ b/sass/abstractions/_mixins.scss
@@ -11,7 +11,7 @@
 
   @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
     & {
-      font-size: $min-font-size;
+      // font-size: $min-font-size;
       @media screen and (min-width: $min-vw) {
         font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
       }
